# nepali-but-code

./: CHANGELOG.md  LICENSE  README.md  kompiel-r.cabal  momos.cabal  nepali  nepali-but-code.cabal
app/: Main.hs  Parse.hs  nepali
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
