cabal-version:      2.4
name:               kompiel-r
version:            0.1.0.0
synopsis:           A compiler for a language yet to be written

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Axarva
maintainer:         timsinaatharva@gmail.com

-- A copyright notice.
-- copyright:
category:           Development
extra-source-files: CHANGELOG.md

executable compiel-r
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.1.0
    hs-source-dirs:   app
    default-language: Haskell2010
