cabal-version:      2.4
name:               momos
version:            0.1.0.0
synopsis:           A compiler for a programming language very similar to Nepali (Inspired by Haskell)

-- A longer description of the package.
description: This is a a prototype language (and will perhaps never be industrial strength) that I am currently building to make it easier for young Nepalese students to learn functional programming principles, especially targeting students who find English difficult.
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Axarva
maintainer:         timsinaatharva@gmail.com

-- A copyright notice.
-- copyright:
category:           Development
extra-source-files: CHANGELOG.md

executable momos
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.1.0, parsec-numbers, parsec, mtl, containers
    hs-source-dirs:   app
    default-language: Haskell2010
